--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
 }
 
 body {
-    background: url(../img/fundo.jpg);
+    background: url(../img/fundo.gif);
     background-position: center center;
-    background-size: cover cover;
+    background-size: cover;
     padding: 0;
     margin: 0;
     font-weight: 300;
@@ -29,9 +29,10 @@ main {
     gap: 1vw;
 }
 
-.robotron {
-    background: url(../img/estrutura.png) no-repeat;
-    background-position: center center;
+.robotdog {
+    background: url(../img/estrutura.png) no-repeat rgba(5, 10, 15, 0.7);
+    background-position: center;
+    border-radius: 50%;
     margin: 0;
     flex-basis: 40%;
     position: relative;
@@ -41,28 +42,15 @@ main {
     height: 110%;
     z-index: 1;
     position: absolute;
-    left: -20%;
-    top: -5%;
-}
-
-.titulo {
-    transform: rotate(180deg);
-    font-weight: 500;
-    font-size: 130px;
-    position: absolute;
-    bottom: 7rem;
-    left: -3rem;
-    line-height: 0.8;
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
-    color: rgba(255,255,255,0.8)
+    left: -12%;
+    top: -11%;
 }
 
 .box {
-    background: rgba(0,0,0,0.6);
+    background: rgba(5, 10, 15, 0.7);
     clip-path: polygon(calc(100% - 30px) 0, 100% 30px, 100% calc(100% - 30px), calc(100% - 30px) 100%, 30px 100%, 0 calc(100% - 30px), 0 30px, 30px 0);
     border-left: 5px solid var(--main-cinza);
-    height: 80%;
+    height: 100%;
 }
 
 /****************************** Equipamentos *****/
@@ -72,7 +60,7 @@ main {
 }
 
 .montador {
-    height: 100%;;
+    height: 100%;
 }
 
 .montador-conteudo {
@@ -86,7 +74,7 @@ main {
 .peca-titulo {
     color: var(--main-branco);
     text-transform: uppercase;
-    font-size: 2.5em;
+    font-size: 2.2em;
 }
 
 .controle {
