--- a/css/style.css
+++ b/css/style.css
@@ -30,30 +30,37 @@ main {
 }
 
 .robotdog {
-    background: url(../img/estrutura.png) no-repeat rgba(5, 10, 15, 0.7);
+    background: url(../img/estrutura.png) no-repeat rgba(5, 10, 15, 0.9);
     background-position: center;
     border-radius: 50%;
-    margin: 0;
     flex-basis: 40%;
     position: relative;
 }
 
 .robo {
-    height: 110%;
     z-index: 1;
     position: absolute;
-    left: -12%;
-    top: -11%;
+
+}
+
+#robotdog {
+    top: -10px;
+    left: -10px;
+    border-radius: 50%;
+    width: 500px;
+    height: 500px;
 }
 
 .box {
-    background: rgba(5, 10, 15, 0.7);
+    background: url(../img/estrutura.png) no-repeat rgba(5, 10, 15, 0.4);
+    background-position: center;
     clip-path: polygon(calc(100% - 30px) 0, 100% 30px, 100% calc(100% - 30px), calc(100% - 30px) 100%, 30px 100%, 0 calc(100% - 30px), 0 30px, 30px 0);
     border-left: 5px solid var(--main-cinza);
     height: 100%;
 }
 
-/****************************** Equipamentos *****/
+
+/*** Equipamentos ***************************/
 
 .equipamentos {
     flex-basis: 32%;
@@ -74,7 +81,7 @@ main {
 .peca-titulo {
     color: var(--main-branco);
     text-transform: uppercase;
-    font-size: 2.2em;
+    font-size: 2.1em;
 }
 
 .controle {
@@ -138,7 +145,7 @@ main {
 
 
 
-/****************************** Estatísticas *****/
+/*** Estatísticas ***************************/
 .estatisticas {
     flex-basis: 23%;
     padding: 2em 2em 0;
