--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: url(../img/fundo.gif);
+    background: url(../img/fundo.gif) rgba(0, 0, 0, 1);
     background-position: center center;
     background-size: cover;
     padding: 0;
